fix: Resolve complie error